cleanup and html

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,6 @@ monitor_speed = 115200
 lib_deps =
   # Using a library name
   NTPClient@^3.1.0
-  WifiManager@293f705
+  WifiManager@0.15.0
   NeoPixelBus@^2.5.7
   SPI
