--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,15 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 monitor_speed = 115200
+upload_speed = 256000
+monitor_filters = esp8266_exception_decoder
+build_type = debug
+build_flags =
+  -fexceptions 
+  -D CONT_STACKSIZE=8192 
 lib_deps =
   # Using a library name
-  NTPClient@^3.1.0
   WifiManager@0.15.0
-  NeoPixelBus@^2.5.7
   ArduinoJson@6.15.1
+  ezTime@0.8.3
+  #NeoPixelBus@^2.5.7
