--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,9 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 monitor_speed = 115200
-upload_speed = 256000
+upload_speed = 921600
 monitor_filters = esp8266_exception_decoder
-build_type = debug
+#build_type = debug
 build_flags =
   -fexceptions 
   -D CONT_STACKSIZE=8192 
@@ -24,4 +24,4 @@ lib_deps =
   WifiManager@0.15.0
   ArduinoJson@6.15.1
   ezTime@0.8.3
-  #NeoPixelBus@^2.5.7
+  NeoPixelBus@^2.5.7
