config fixes, localtime and color selection

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,10 +18,24 @@ monitor_filters = esp8266_exception_decoder
 #build_type = debug
 build_flags =
   -fexceptions 
-  -D CONT_STACKSIZE=8192 
+  -D CONT_STACKSIZE=18192 
 lib_deps =
   # Using a library name
   WifiManager@0.15.0
   ArduinoJson@6.15.1
   ezTime@0.8.3
-  NeoPixelBus@^2.5.7
+  NeoPixelBus@2.5.7
+
+
+[env:lolin32]
+platform = espressif32
+framework = arduino
+board = lolin32
+monitor_speed = 115200
+upload_speed = 921600
+lib_deps =
+  # Using a library name
+  WifiManager=https://github.com/tzapu/WiFiManager.git#development
+  ArduinoJson@6.15.1
+  ezTime@0.8.3
+  NeoPixelBus@2.5.7
