--- a/platformio.ini
+++ b/platformio.ini
@@ -14,13 +14,12 @@ board = esp12e
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-monitor_filters = esp8266_exception_decoder
+monitor_filters = colorize, esp8266_exception_decoder
 #build_type = debug
-build_flags =
-  -fexceptions 
-  -D CONT_STACKSIZE=18192 
+; build_flags =
+;   -fexceptions 
+;   -D CONT_STACKSIZE=10480
 lib_deps =
-  # Using a library name
   WifiManager@0.15.0
   ArduinoJson@6.15.1
   ezTime@0.8.3
@@ -34,7 +33,6 @@ board = lolin32
 monitor_speed = 115200
 upload_speed = 921600
 lib_deps =
-  # Using a library name
   WifiManager=https://github.com/tzapu/WiFiManager.git#development
   ArduinoJson@6.15.1
   ezTime@0.8.3
