--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,11 @@ board = esp12e
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-monitor_filters = colorize, esp8266_exception_decoder
-#build_type = debug
-; build_flags =
-;   -fexceptions 
-;   -D CONT_STACKSIZE=10480
+monitor_filters = esp8266_exception_decoder
+build_type = release
+build_flags =
+   -fexceptions 
+   -D CONT_STACKSIZE=20480
 lib_deps =
   WifiManager@0.15.0
   ArduinoJson@6.15.1
