--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+board_build.f_cpu = 160000000L
 monitor_speed = 115200
 upload_speed = 921600
 monitor_filters = esp8266_exception_decoder
