--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/home/merlin/dev/esp8266-clock/venv/bin/python3"
+    "python.pythonPath": "/home/merlin/.platformio/penv/bin/python",
+    "python.formatting.provider": "black"
 }
