--- a/platformio.ini
+++ b/platformio.ini
@@ -19,12 +19,13 @@ monitor_filters = esp8266_exception_decoder
 build_type = release
 build_flags =
    -fexceptions 
-   -D CONT_STACKSIZE=20480
+   -D CONT_STACKSIZE=16384
 lib_deps =
   WifiManager@0.15.0
   ArduinoJson@6.15.1
   ezTime@0.8.3
   NeoPixelBus@2.5.7
+extra_scripts = pre:build_data.py
 
 
 [env:lolin32]
