--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp12e]
-platform = espressif8266
+#platform = espressif8266
+platform = https://github.com/platformio/platform-espressif8266.git
 board = esp12e
 framework = arduino
 board_build.f_cpu = 160000000L
