--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,27 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
-#platform = espressif8266
+[env:esp12e-devel]
 platform = https://github.com/platformio/platform-espressif8266.git
+board = esp12e
+framework = arduino
+board_build.f_cpu = 160000000L
+monitor_speed = 115200
+upload_speed = 921600
+monitor_filters = esp8266_exception_decoder
+build_type = debug
+build_flags =
+   -fexceptions 
+   -D CONT_STACKSIZE=16384
+lib_deps =
+  WifiManager=https://github.com/tzapu/WiFiManager.git#development
+  ArduinoJson@6.15.1
+  ezTime@0.8.3
+  NeoPixelBus@2.5.7
+extra_scripts = pre:build_data.py
+
+[env:esp12e]
+platform = espressif8266
 board = esp12e
 framework = arduino
 board_build.f_cpu = 160000000L
@@ -20,14 +38,13 @@ monitor_filters = esp8266_exception_decoder
 build_type = release
 build_flags =
    -fexceptions 
-   -D CONT_STACKSIZE=16384
+   -D CONT_STACKSIZE=10240
 lib_deps =
   WifiManager@0.15.0
   ArduinoJson@6.15.1
   ezTime@0.8.3
   NeoPixelBus@2.5.7
 extra_scripts = pre:build_data.py
-
 
 [env:lolin32]
 platform = espressif32
