added mqtt basic, fixed second fluid motion modulo

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,6 +25,7 @@ lib_deps =
   ArduinoJson@6.15.1
   ezTime@0.8.3
   NeoPixelBus@2.5.7
+  PubSubClient@2.8
 extra_scripts = pre:build_data.py
 
 [env:esp12e]
@@ -44,6 +45,7 @@ lib_deps =
   ArduinoJson@6.15.1
   ezTime@0.8.3
   NeoPixelBus@2.5.7
+  PubSubClient@2.8
 extra_scripts = pre:build_data.py
 
 [env:lolin32]
@@ -57,3 +59,4 @@ lib_deps =
   ArduinoJson@6.15.1
   ezTime@0.8.3
   NeoPixelBus@2.5.7
+extra_scripts = pre:build_data.py
