small bugfixes and new esp32 platform settings

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ build_flags =
    -D CONT_STACKSIZE=16384
 lib_deps =
   WifiManager=https://github.com/tzapu/WiFiManager.git#development
+  #WifiManager@0.15.0
   ArduinoJson@6.15.1
   ezTime@0.8.3
   NeoPixelBus@2.5.7
@@ -38,7 +39,6 @@ upload_speed = 921600
 monitor_filters = esp8266_exception_decoder
 build_type = release
 build_flags =
-   -fexceptions 
    -D CONT_STACKSIZE=10240
 lib_deps =
   WifiManager@0.15.0
@@ -48,15 +48,32 @@ lib_deps =
   PubSubClient@2.8
 extra_scripts = pre:build_data.py
 
-[env:lolin32]
+[env:lolin32-devel]
 platform = espressif32
 framework = arduino
 board = lolin32
 monitor_speed = 115200
 upload_speed = 921600
+build_type =debug 
 lib_deps =
   WifiManager=https://github.com/tzapu/WiFiManager.git#development
   ArduinoJson@6.15.1
   ezTime@0.8.3
   NeoPixelBus@2.5.7
+  PubSubClient@2.8
+extra_scripts = pre:build_data.py
+
+[env:lolin32]
+platform = espressif32@1.12.1
+framework = arduino
+board = lolin32
+monitor_speed = 115200
+upload_speed = 921600
+build_type = release
+lib_deps =
+  WifiManager=https://github.com/tzapu/WiFiManager.git#development
+  ArduinoJson@6.15.1
+  ezTime@0.8.3
+  NeoPixelBus@2.5.7
+  PubSubClient@2.8
 extra_scripts = pre:build_data.py
