--- a/platformio.ini
+++ b/platformio.ini
@@ -9,39 +9,43 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp12e-devel]
-platform = https://github.com/platformio/platform-espressif8266.git
+platform = espressif8266
 board = esp12e
 framework = arduino
-board_build.f_cpu = 160000000L
+board_build.f_cpu = 80000000L
 monitor_speed = 115200
 upload_speed = 921600
 monitor_filters = esp8266_exception_decoder
 build_type = debug
 build_flags =
    -fexceptions 
-   -D CONT_STACKSIZE=16384
+   -DCONT_STACKSIZE=10240
+   -DDEBUG_BUILD
+   -O0 
+   -ggdb3 
+   -g3
 lib_deps =
-  WifiManager=https://github.com/tzapu/WiFiManager.git#development
-  #WifiManager@0.15.0
-  ArduinoJson@6.15.1
-  ezTime@0.8.3
-  NeoPixelBus@2.5.7
+  WifiManager@0.15.0
+  ArduinoJson
+  ezTime
+  NeoPixelBus
 extra_scripts = pre:build_data.py
 
 [env:esp12e]
 platform = espressif8266
 board = esp12e
 framework = arduino
-board_build.f_cpu = 160000000L
+board_build.f_cpu = 80000000L
 monitor_speed = 115200
 upload_speed = 921600
 monitor_filters = esp8266_exception_decoder
 build_type = release
 build_flags =
    -D CONT_STACKSIZE=10240
+   -O3
 lib_deps =
   WifiManager@0.15.0
-  ArduinoJson@6.15.1
+  ArduinoJson@6.15.2
   ezTime@0.8.3
   NeoPixelBus@2.5.7
 extra_scripts = pre:build_data.py
