small code cleanups

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,8 @@ lib_deps =
   ezTime
   NeoPixelBus
 extra_scripts = pre:build_data.py
+check_tool = cppcheck
+check_flags = --enable=all
 
 [env:esp12e]
 platform = espressif8266
