--- a/platformio.ini
+++ b/platformio.ini
@@ -14,12 +14,13 @@ board = esp12e
 framework = arduino
 board_build.f_cpu = 80000000L
 monitor_speed = 115200
-upload_speed = 921600
+; upload_speed = 921600
+upload_speed = 3000000
 monitor_filters = esp8266_exception_decoder
 build_type = debug
 build_flags =
    -fexceptions 
-   -DCONT_STACKSIZE=20240
+   -DCONT_STACKSIZE=20480
    -DDEBUG_BUILD
    -O0 
    -ggdb3 
@@ -43,7 +44,7 @@ upload_speed = 921600
 monitor_filters = esp8266_exception_decoder
 build_type = release
 build_flags =
-   -D CONT_STACKSIZE=10240
+   -D CONT_STACKSIZE=20480
    -O3
 lib_deps =
   WifiManager@0.15.0
@@ -58,7 +59,7 @@ framework = arduino
 board = lolin32
 monitor_speed = 115200
 upload_speed = 921600
-build_type =debug 
+build_type = debug 
 lib_deps =
   WifiManager=https://github.com/tzapu/WiFiManager.git#development
   ArduinoJson@6.15.1
