completed backlight support. better ci/cd. better debugging

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,13 +18,8 @@ monitor_speed = 115200
 upload_speed = 3000000
 monitor_filters = esp8266_exception_decoder
 build_type = debug
-build_flags =
-   -fexceptions 
-   -DCONT_STACKSIZE=20480
-   -DDEBUG_BUILD
-   -O0 
-   -ggdb3 
-   -g3
+#build_flags = !echo -fexceptions -DVERSION=$(git rev-parse --short HEAD) -DCONT_STACKSIZE=20480 -DDEBUG_BUILD -O0 -ggdb3  -g3
+build_flags = !python get_build_flags.py debug
 lib_deps =
   WifiManager@0.15.0
   ArduinoJson
@@ -43,9 +38,11 @@ monitor_speed = 115200
 upload_speed = 921600
 monitor_filters = esp8266_exception_decoder
 build_type = release
-build_flags =
-   -D CONT_STACKSIZE=20480
-   -O3
+; build_flags =
+;    -D VERSION=v$(git describe --abbrev=0 --tags)
+;    -D CONT_STACKSIZE=20480
+;    -O3
+build_flags = !python get_build_flags.py 
 lib_deps =
   WifiManager@0.15.0
   ArduinoJson@6.15.2
