--- a/platformio.ini
+++ b/platformio.ini
@@ -14,12 +14,10 @@ board = esp12e
 framework = arduino
 board_build.f_cpu = 80000000L
 monitor_speed = 115200
-; upload_speed = 921600
 upload_speed = 3000000
 monitor_filters = esp8266_exception_decoder
 build_type = debug
-#build_flags = !echo -fexceptions -DVERSION=$(git rev-parse --short HEAD) -DCONT_STACKSIZE=20480 -DDEBUG_BUILD -O0 -ggdb3  -g3
-build_flags = !python get_build_flags.py debug
+build_flags = !python get_build_flags.py debug esp8266
 lib_deps =
   WifiManager@0.15.0
   ArduinoJson
@@ -35,14 +33,10 @@ board = esp12e
 framework = arduino
 board_build.f_cpu = 80000000L
 monitor_speed = 115200
-upload_speed = 921600
+upload_speed = 3000000
 monitor_filters = esp8266_exception_decoder
 build_type = release
-; build_flags =
-;    -D VERSION=v$(git describe --abbrev=0 --tags)
-;    -D CONT_STACKSIZE=20480
-;    -O3
-build_flags = !python get_build_flags.py 
+build_flags = !python get_build_flags.py release esp8266 
 lib_deps =
   WifiManager@0.15.0
   ArduinoJson@6.15.2
@@ -50,13 +44,14 @@ lib_deps =
   NeoPixelBus@2.5.7
 extra_scripts = pre:build_data.py
 
-[env:lolin32-devel]
+[env:esp32dev-devel]
 platform = espressif32
 framework = arduino
 board = lolin32
 monitor_speed = 115200
 upload_speed = 921600
 build_type = debug 
+build_flags = !python get_build_flags.py debug esp32
 lib_deps =
   WifiManager=https://github.com/tzapu/WiFiManager.git#development
   ArduinoJson@6.15.1
@@ -64,13 +59,14 @@ lib_deps =
   NeoPixelBus@2.5.7
 extra_scripts = pre:build_data.py
 
-[env:lolin32]
+[env:esp32dev]
 platform = espressif32@1.12.1
 framework = arduino
 board = lolin32
 monitor_speed = 115200
 upload_speed = 921600
 build_type = release
+build_flags = !python get_build_flags.py release esp32
 lib_deps =
   WifiManager=https://github.com/tzapu/WiFiManager.git#development
   ArduinoJson@6.15.1
