--- a/platformio.ini
+++ b/platformio.ini
@@ -8,48 +8,53 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[common]
+monitor_speed = 115200
+upload_speed = 3000000
+framework = arduino
+check_tool = cppcheck
+check_flags = --enable=all
+extra_scripts = pre:build_data.py
+
 [env:esp12e-devel]
 platform = espressif8266
 board = esp12e
-framework = arduino
 board_build.f_cpu = 80000000L
-monitor_speed = 115200
-upload_speed = 3000000
-monitor_filters = esp8266_exception_decoder
 build_type = debug
-build_flags = !python get_build_flags.py debug esp8266
 lib_deps =
   WifiManager@0.15.0
   ArduinoJson
   ezTime
   NeoPixelBus
-extra_scripts = pre:build_data.py
-check_tool = cppcheck
-check_flags = --enable=all
+build_flags = !python get_build_flags.py debug esp8266
+monitor_filters = esp8266_exception_decoder
+monitor_speed = ${common.monitor_speed}
+extra_scripts= ${common.extra_scripts}
+check_tool = ${common.check_tool}
+check_flags = ${common.check_flags}
+framework = ${common.framework}
 
 [env:esp12e]
 platform = espressif8266
 board = esp12e
-framework = arduino
 board_build.f_cpu = 80000000L
-monitor_speed = 115200
-upload_speed = 3000000
 monitor_filters = esp8266_exception_decoder
 build_type = release
-build_flags = !python get_build_flags.py release esp8266 
 lib_deps =
   WifiManager@0.15.0
   ArduinoJson@6.15.2
   ezTime@0.8.3
   NeoPixelBus@2.5.7
-extra_scripts = pre:build_data.py
+build_flags = !python get_build_flags.py release esp8266
+monitor_speed = ${common.monitor_speed}
+extra_scripts= ${common.extra_scripts}
+check_tool = ${common.check_tool}
+check_flags = ${common.check_flags}
+framework = ${common.framework}
 
 [env:esp32dev-devel]
 platform = espressif32
-framework = arduino
-board = lolin32
-monitor_speed = 115200
-upload_speed = 921600
+board = esp32dev
 build_type = debug 
 build_flags = !python get_build_flags.py debug esp32
 lib_deps =
@@ -57,14 +62,15 @@ lib_deps =
   ArduinoJson@6.15.1
   ezTime@0.8.3
   NeoPixelBus@2.5.7
-extra_scripts = pre:build_data.py
+monitor_speed = ${common.monitor_speed}
+extra_scripts= ${common.extra_scripts}
+check_tool = ${common.check_tool}
+check_flags = ${common.check_flags}
+framework = ${common.framework}
 
 [env:esp32dev]
 platform = espressif32@1.12.1
-framework = arduino
-board = lolin32
-monitor_speed = 115200
-upload_speed = 921600
+board = esp32dev 
 build_type = release
 build_flags = !python get_build_flags.py release esp32
 lib_deps =
@@ -72,4 +78,8 @@ lib_deps =
   ArduinoJson@6.15.1
   ezTime@0.8.3
   NeoPixelBus@2.5.7
-extra_scripts = pre:build_data.py
+monitor_speed = ${common.monitor_speed}
+extra_scripts= ${common.extra_scripts}
+check_tool = ${common.check_tool}
+check_flags = ${common.check_flags}
+framework = ${common.framework}
