fix deps in platformio

--- a/platformio.ini
+++ b/platformio.ini
@@ -41,10 +41,10 @@ board_build.f_cpu = 80000000L
 monitor_filters = esp8266_exception_decoder
 build_type = release
 lib_deps =
-  WifiManager@0.15.0
-  ArduinoJson@6.15.2
-  ezTime@0.8.3
-  NeoPixelBus@2.5.7
+  WifiManager@^0.15.0
+  ArduinoJson@^6.15.2
+  ezTime@^0.8.3
+  NeoPixelBus@^2.5.7
 build_flags = !python get_build_flags.py release esp8266
 monitor_speed = ${common.monitor_speed}
 extra_scripts= ${common.extra_scripts}
@@ -59,9 +59,9 @@ build_type = debug
 build_flags = !python get_build_flags.py debug esp32
 lib_deps =
   WifiManager=https://github.com/tzapu/WiFiManager.git#development
-  ArduinoJson@6.15.1
-  ezTime@0.8.3
-  NeoPixelBus@2.5.7
+  ArduinoJson@
+  ezTime
+  NeoPixelBus
 monitor_speed = ${common.monitor_speed}
 extra_scripts= ${common.extra_scripts}
 check_tool = ${common.check_tool}
@@ -75,9 +75,9 @@ build_type = release
 build_flags = !python get_build_flags.py release esp32
 lib_deps =
   WifiManager=https://github.com/tzapu/WiFiManager.git#development
-  ArduinoJson@6.15.1
-  ezTime@0.8.3
-  NeoPixelBus@2.5.7
+  ArduinoJson@^6.15.1
+  ezTime@^0.8.3
+  NeoPixelBus@^2.5.7
 monitor_speed = ${common.monitor_speed}
 extra_scripts= ${common.extra_scripts}
 check_tool = ${common.check_tool}
