--- a/platformio.ini
+++ b/platformio.ini
@@ -33,6 +33,7 @@ extra_scripts= ${common.extra_scripts}
 check_tool = ${common.check_tool}
 check_flags = ${common.check_flags}
 framework = ${common.framework}
+upload_speed = ${common.upload_speed}
 
 [env:esp12e]
 platform = espressif8266
@@ -51,6 +52,7 @@ extra_scripts= ${common.extra_scripts}
 check_tool = ${common.check_tool}
 check_flags = ${common.check_flags}
 framework = ${common.framework}
+upload_speed = ${common.upload_speed}
 
 [env:esp32dev-devel]
 platform = espressif32
@@ -67,6 +69,7 @@ extra_scripts= ${common.extra_scripts}
 check_tool = ${common.check_tool}
 check_flags = ${common.check_flags}
 framework = ${common.framework}
+upload_speed = ${common.upload_speed}
 
 [env:esp32dev]
 platform = espressif32@1.12.1
@@ -83,3 +86,4 @@ extra_scripts= ${common.extra_scripts}
 check_tool = ${common.check_tool}
 check_flags = ${common.check_flags}
 framework = ${common.framework}
+upload_speed = ${common.upload_speed}
