--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "/home/merlin/.platformio/penv/bin/python",
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "compile-hero.disable-compile-files-on-did-save-code": false
 }
