--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "gulp-html-i18n": "^0.16.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
+    "gulp-purgecss": "^3.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-terser": "^1.4.0",
