--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,10 @@
 
 [common]
 monitor_speed = 115200
-upload_speed = 3000000
+upload_speed = 921600
 framework = arduino
 check_tool = cppcheck
-check_flags = --enable=all
+check_flags = --enable=all -DDEBUG_BUILD -DVERSION=0.1
 extra_scripts = pre:build_data.py
 
 [env:esp12e-devel]
@@ -21,15 +21,15 @@ platform = espressif8266
 board = esp12e
 board_build.f_cpu = 80000000L
 build_type = debug
-lib_deps =
-  WifiManager@0.15.0
-  ArduinoJson
-  ezTime
-  NeoPixelBus
+lib_deps = 
+	WifiManager@0.15.0
+	ArduinoJson
+	ezTime
+	NeoPixelBus
 build_flags = !python get_build_flags.py debug esp8266
 monitor_filters = esp8266_exception_decoder
 monitor_speed = ${common.monitor_speed}
-extra_scripts= ${common.extra_scripts}
+extra_scripts = ${common.extra_scripts}
 check_tool = ${common.check_tool}
 check_flags = ${common.check_flags}
 framework = ${common.framework}
@@ -41,14 +41,13 @@ board = esp12e
 board_build.f_cpu = 80000000L
 monitor_filters = esp8266_exception_decoder
 build_type = release
-lib_deps =
-  WifiManager@^0.15.0
-  ArduinoJson@^6.15.2
-  ezTime@^0.8.3
-  NeoPixelBus@^2.5.7
+lib_deps = 
+	WifiManager@^0.15.0
+	ezTime@^0.8.3
+	NeoPixelBus@^2.5.7
 build_flags = !python get_build_flags.py release esp8266
 monitor_speed = ${common.monitor_speed}
-extra_scripts= ${common.extra_scripts}
+extra_scripts = ${common.extra_scripts}
 check_tool = ${common.check_tool}
 check_flags = ${common.check_flags}
 framework = ${common.framework}
@@ -57,15 +56,15 @@ upload_speed = ${common.upload_speed}
 [env:esp32dev-devel]
 platform = espressif32
 board = esp32dev
-build_type = debug 
+build_type = debug
 build_flags = !python get_build_flags.py debug esp32
-lib_deps =
-  WifiManager=https://github.com/tzapu/WiFiManager.git#development
-  ArduinoJson@
-  ezTime
-  NeoPixelBus
+lib_deps = 
+	WifiManager=https://github.com/tzapu/WiFiManager.git#development
+	ArduinoJson@
+	ezTime
+	NeoPixelBus
 monitor_speed = ${common.monitor_speed}
-extra_scripts= ${common.extra_scripts}
+extra_scripts = ${common.extra_scripts}
 check_tool = ${common.check_tool}
 check_flags = ${common.check_flags}
 framework = ${common.framework}
@@ -73,16 +72,16 @@ upload_speed = ${common.upload_speed}
 
 [env:esp32dev]
 platform = espressif32@1.12.1
-board = esp32dev 
+board = esp32dev
 build_type = release
 build_flags = !python get_build_flags.py release esp32
-lib_deps =
-  WifiManager=https://github.com/tzapu/WiFiManager.git#development
-  ArduinoJson@^6.15.1
-  ezTime@^0.8.3
-  NeoPixelBus@^2.5.7
+lib_deps = 
+	WifiManager=https://github.com/tzapu/WiFiManager.git#development
+	ArduinoJson@^6.15.1
+	ezTime@^0.8.3
+	NeoPixelBus@^2.5.7
 monitor_speed = ${common.monitor_speed}
-extra_scripts= ${common.extra_scripts}
+extra_scripts = ${common.extra_scripts}
 check_tool = ${common.check_tool}
 check_flags = ${common.check_flags}
 framework = ${common.framework}
