--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-terser": "^1.4.0",
+    "node-sass": "^5.0.0",
     "rollup-stream": "^1.24.1",
     "spectre.css": "^0.5.9"
   }
