--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ board = esp12e
 board_build.f_cpu = 80000000L
 build_type = debug
 lib_deps = 
-	WifiManager@0.15.0
+	WifiManager
 	ArduinoJson
 	ezTime
 	NeoPixelBus
@@ -45,6 +45,7 @@ lib_deps =
 	WifiManager@^0.15.0
 	ezTime@^0.8.3
 	NeoPixelBus@^2.5.7
+	ArduinoJson@^6.17.2
 build_flags = !python get_build_flags.py release esp8266
 monitor_speed = ${common.monitor_speed}
 extra_scripts = ${common.extra_scripts}
