--- a/platformio.ini
+++ b/platformio.ini
@@ -42,7 +42,7 @@ board_build.f_cpu = 80000000L
 monitor_filters = esp8266_exception_decoder
 build_type = release
 lib_deps = 
-	WifiManager@^0.15.0
+	WifiManager@^0.16.0
 	ezTime@^0.8.3
 	NeoPixelBus@^2.5.7
 	ArduinoJson@^6.17.2
@@ -60,7 +60,7 @@ board = esp32dev
 build_type = debug
 build_flags = !python get_build_flags.py debug esp32
 lib_deps = 
-	WifiManager=https://github.com/tzapu/WiFiManager.git#development
+	WifiManager=https://github.com/tzapu/WiFiManager.git#master
 	ArduinoJson@
 	ezTime
 	NeoPixelBus
@@ -77,7 +77,7 @@ board = esp32dev
 build_type = release
 build_flags = !python get_build_flags.py release esp32
 lib_deps = 
-	WifiManager=https://github.com/tzapu/WiFiManager.git#development
+	WifiManager=https://github.com/tzapu/WiFiManager.git#master
 	ArduinoJson@^6.15.1
 	ezTime@^0.8.3
 	NeoPixelBus@^2.5.7
