--- a/platformio.ini
+++ b/platformio.ini
@@ -19,13 +19,15 @@ extra_scripts = pre:build_data.py
 [env:esp12e-devel]
 platform = espressif8266
 board = esp12e
-board_build.f_cpu = 80000000L
+board_build.f_cpu = 160000000L
+board_build.f_flash = 80000000L
 build_type = debug
 lib_deps = 
 	WifiManager
 	ArduinoJson
 	ezTime
 	NeoPixelBus
+	bblanchon/StreamUtils@^1.6.1
 build_flags = !python get_build_flags.py debug esp8266
 monitor_filters = esp8266_exception_decoder
 monitor_speed = ${common.monitor_speed}
@@ -38,14 +40,16 @@ upload_speed = ${common.upload_speed}
 [env:esp12e]
 platform = espressif8266
 board = esp12e
-board_build.f_cpu = 80000000L
+board_build.f_cpu = 160000000L
+board_build.f_flash = 80000000L
 monitor_filters = esp8266_exception_decoder
 build_type = release
 lib_deps = 
 	WifiManager@^0.16.0
 	ezTime@^0.8.3
-	NeoPixelBus@^2.5.7
+	NeoPixelBus@^2.6.5
 	ArduinoJson@^6.17.2
+	bblanchon/StreamUtils@^1.6.1
 build_flags = !python get_build_flags.py release esp8266
 monitor_speed = ${common.monitor_speed}
 extra_scripts = ${common.extra_scripts}
@@ -64,6 +68,7 @@ lib_deps =
 	ArduinoJson@
 	ezTime
 	NeoPixelBus
+	bblanchon/StreamUtils@^1.6.1
 monitor_speed = ${common.monitor_speed}
 extra_scripts = ${common.extra_scripts}
 check_tool = ${common.check_tool}
@@ -80,7 +85,8 @@ lib_deps =
 	WifiManager=https://github.com/tzapu/WiFiManager.git#master
 	ArduinoJson@^6.15.1
 	ezTime@^0.8.3
-	NeoPixelBus@^2.5.7
+	NeoPixelBus@^2.6.5
+	bblanchon/StreamUtils@^1.6.1
 monitor_speed = ${common.monitor_speed}
 extra_scripts = ${common.extra_scripts}
 check_tool = ${common.check_tool}
