update actions workflow for new targets

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         pip install platformio
 
     - name: Run PlatformIO build on selected platforms
-      run: platformio run -e esp32dev -e esp12e
+      run: platformio run -e esp12e-bitbang -e esp12e-dma -e esp12e-uart
     
     # - name: Code static analysis
     #   run: platformio check
