implemented mqtt support

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ lib_deps =
 	ArduinoJson
 	ezTime
 	NeoPixelBus
+	knolleary/PubSubClient@^2.8
 build_flags = !python get_build_flags.py debug esp8266 DEBUG_MODE
 monitor_filters = esp8266_exception_decoder
 monitor_speed = ${common.monitor_speed}
@@ -48,7 +49,8 @@ lib_deps =
 	ArduinoJson
 	ezTime
 	NeoPixelBus
-build_flags = !python get_build_flags.py release esp8266 DMA_MODE 
+	knolleary/PubSubClient@^2.8
+build_flags = !python get_build_flags.py release esp8266 DMA_MODE
 monitor_speed = ${common.monitor_speed}
 extra_scripts = ${common.extra_scripts}
 check_tool = ${common.check_tool}
@@ -68,6 +70,7 @@ lib_deps =
 	ArduinoJson
 	ezTime
 	NeoPixelBus
+	knolleary/PubSubClient@^2.8
 build_flags = !python get_build_flags.py release esp8266 UART_MODE
 monitor_speed = ${common.monitor_speed}
 extra_scripts = ${common.extra_scripts}
@@ -88,6 +91,7 @@ lib_deps =
 	ArduinoJson
 	ezTime
 	NeoPixelBus
+	knolleary/PubSubClient@^2.8
 build_flags = !python get_build_flags.py release esp8266 BITBANG_MODE
 monitor_speed = ${common.monitor_speed}
 extra_scripts = ${common.extra_scripts}
@@ -106,6 +110,7 @@ lib_deps =
 	ArduinoJson
 	ezTime
 	NeoPixelBus
+	knolleary/PubSubClient@^2.8
 monitor_speed = ${common.monitor_speed}
 extra_scripts = ${common.extra_scripts}
 check_tool = ${common.check_tool}
@@ -123,6 +128,7 @@ lib_deps =
 	ArduinoJson
 	ezTime
 	NeoPixelBus
+	knolleary/PubSubClient@^2.8
 monitor_speed = ${common.monitor_speed}
 extra_scripts = ${common.extra_scripts}
 check_tool = ${common.check_tool}
