--- a/web/package.json
+++ b/web/package.json
@@ -17,11 +17,11 @@
     "gulp-html-i18n": "^0.16.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^5.0.0",
-    "gulp-purgecss": "^4.0.3",
+    "gulp-purgecss": "^4.1.3",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-terser": "^2.0.1",
-    "node-sass": "^6.0.1",
+    "sass": "^1.49.0",
     "spectre.css": "^0.5.9"
   }
 }
