--- a/platformio.ini
+++ b/platformio.ini
@@ -106,7 +106,7 @@ board = esp32dev
 build_type = debug
 build_flags = !python get_build_flags.py debug esp32
 lib_deps = 
-	WifiManager=https://github.com/tzapu/WiFiManager.git#master
+	WifiManager
 	ArduinoJson
 	ezTime
 	NeoPixelBus
@@ -124,7 +124,7 @@ board = esp32dev
 build_type = release
 build_flags = !python get_build_flags.py release esp32
 lib_deps = 
-	WifiManager=https://github.com/tzapu/WiFiManager.git#master
+	WifiManager
 	ArduinoJson
 	ezTime
 	NeoPixelBus
