--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
     "compile-hero.disable-compile-files-on-did-save-code": false,
     "files.associations": {
         "string_view": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp"
     },
     "C_Cpp.intelliSenseEngineFallback": "Disabled"
 }
