--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,27 +10,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-
-    - name: Install pio and its dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install platformio
-
-    - name: Run PlatformIO build on selected platforms
-      run: platformio run -e esp12e-bitbang -e esp12e-dma -e esp12e-uart
-    
-    # - name: Code static analysis
-    #   run: platformio check
-
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: .pio/build/*/firmware_*.bin
-        tag: ${{ github.ref }}
-        overwrite: true
-        file_glob: true
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/pip
+            ~/.platformio/.cache
+          key: ${{ runner.os }}-pio
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+      - name: Install PlatformIO Core
+        run: pip install --upgrade platformio
+      - name: Run PlatformIO build on selected platforms
+        run: platformio run -e esp12e-bitbang -e esp12e-dma -e esp12e-uart
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: .pio/build/*/firmware_*.bin
+          tag: ${{ github.ref }}
+          overwrite: true
+          file_glob: true
