--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -81,7 +81,7 @@ jobs:
       if: ${{ matrix.language == 'c-cpp' }}
 
     - name: Run PlatformIO
-      run: platformio run -e esp12e-bitbang -e esp12e-dma -e esp12e-uart
+      run: platformio run --target esp12e-devel
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
